<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.gef_root</groupId>
	<artifactId>org.eclipse.gef.releng</artifactId>
	<version>3.19.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<!-- this is the parent POM from which all modules inherit common settings -->
	<properties>
		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>		
		<tycho.version>${tycho-version}</tycho.version>
		<cbi-plugins.version>1.4.2</cbi-plugins.version>
		<tycho.scmUrl>scm:git:https://github.com/eclipse/gef-classic.git</tycho.scmUrl>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<comparator.repo>https://download.eclipse.org/tools/gef/classic/releases/3.18.0</comparator.repo>
		<surefire.timeout>300</surefire.timeout>
	</properties>

	<build>
		<plugins>
			<plugin>
				<!-- enable tycho build extension -->
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<sourceReferences>
						<generate>true</generate>
					</sourceReferences>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-sourceref-jgit</artifactId>
						<version>${tycho.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
				  <execution>
					<id>plugin-source</id>
					<goals>
					  <goal>plugin-source</goal>
					</goals>
				  </execution>
				  <execution>
					<id>feature-source</id>
					<goals>
					  <goal>feature-source</goal>
					</goals>
					<configuration>
					  <excludes>
						<!-- provide plug-ins not containing any source code -->
						<plugin id="org.eclipse.draw2d.doc.isv" />
						<plugin id="org.eclipse.gef.doc.isv" />
						<plugin id="org.eclipse.zest.doc.isv" />
						<!-- also possible to exclude feature-->
					  </excludes>
					</configuration>
				  </execution>
				</executions>
			  </plugin>
			<plugin>
				<!-- This is needed for source feature generation, as outlined in bug 
					#398250 -->
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>attach-p2-metadata</id>
						<phase>package</phase>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven-antrun-plugin.version}</version>
				<executions>
					<execution>
						<id>replace-tokens</id>
						<phase>process-resources</phase>
						<configuration>
							<target>
								<taskdef resource="net/sf/antcontrib/antcontrib.properties"
									classpathref="maven.plugin.classpath" />
								<if>
									<available file="about.mappings" />
									<then>
										<echo message="Creating backup of about.mappings." />
										<copy file="about.mappings" tofile="about.mappings.backup"
											overwrite="true" />
										<echo
											message="Replacing @build@ token within about.mappings with build id." />
										<replace file="about.mappings">
											<replacefilter token="@build@" value="${buildQualifier}" />
										</replace>
									</then>
								</if>
								<if>
									<available file="javadocOptions.txt" />
									<then>
										<copy file="javadocOptions.txt" tofile="javadocOptions.txt.backup"
											overwrite="true" />
										<echo message="Creating backup of javadocOptions.txt" />
										<replace file="javadocOptions.txt">
											<replacefilter token="@build@"
												value="${unqualifiedVersion}.${buildQualifier}" />
										</replace>
									</then>
								</if>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>replace-back-tokens</id>
						<phase>verify</phase>
						<configuration>
							<target>
								<taskdef resource="net/sf/antcontrib/antcontrib.properties"
									classpathref="maven.plugin.classpath" />
								<if>
									<available file="about.mappings.backup" />
									<then>
										<echo message="Replacing back modified about.mappings with backup." />
										<copy file="about.mappings.backup" tofile="about.mappings"
											overwrite="true" />
										<delete file="about.mappings.backup" />
									</then>
								</if>
								<if>
									<available file="javadocOptions.txt.backup" />
									<then>
										<echo
											message="Replacing back modified javadocOptions.txt with backup." />
										<copy file="javadocOptions.txt.backup" tofile="javadocOptions.txt"
											overwrite="true" />
										<delete file="javadocOptions.txt.backup" />
									</then>
								</if>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>ant-contrib</groupId>
						<artifactId>ant-contrib</artifactId>
						<version>20020829</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho.extras</groupId>
				<artifactId>tycho-p2-extras-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution> 
						<id>compare-version-with-baseline</id>
						<phase>verify</phase>
						<goals>
							<goal>compare-version-with-baselines</goal>
						</goals>
						<configuration>
							<baselines>
								<baseline>${comparator.repo}</baseline> <!-- Previous release) -->
							</baselines>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>2022-03</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<!-- consider pack.gz bundles -->
							<includePackedArtifacts>false</includePackedArtifacts>
							<!-- add target file content to target platform -->
						    <target>
								<file>../target-platform/GEF_classic.target</file>
							  </target>
							<environments>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>	
		<profile>
			<id>eclipse-sign</id>
			<build>
			  <plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<!-- consider pack.gz bundles -->
						<includePackedArtifacts>false</includePackedArtifacts>
						<!-- add target file content to target platform -->
						<target>
							<file>../target-platform/GEF_classic.target</file>
						  </target>
						<environments>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
					</configuration>
				</plugin>
				<plugin>
				  <groupId>org.eclipse.cbi.maven.plugins</groupId>
				  <artifactId>eclipse-jarsigner-plugin</artifactId>
				  <version>${cbi-plugins.version}</version>
				  <executions>
					<execution>
					  <id>sign</id>
					  <goals>
						<goal>sign</goal>
					  </goals>
					  <phase>verify</phase>
					</execution>
				  </executions>
				  <configuration>
					<excludeInnerJars>${defaultSigning-excludeInnerJars}</excludeInnerJars>
					<!--
					 The default timeout is 0 seconds which means "wait forever": https://www.eclipse.org/cbi/sitedocs/eclipse-jarsigner-plugin/sign-mojo.html#timeoutMillis
					 We don't want to wait until the build finally aborts, so, setting a timeout (see bug 507369).
					 Increasing timeout from 60000 to 120000 (see bug 544823).
					-->
					<timeoutMillis>120000</timeoutMillis>
				  </configuration>
				</plugin>
				<plugin>
				  <groupId>org.eclipse.tycho</groupId>
				  <artifactId>tycho-p2-plugin</artifactId>
				  <version>${tycho.version}</version>
				  <executions>
					<execution>
					  <id>p2-metadata</id>
					  <goals>
						<goal>p2-metadata</goal>
					  </goals>
					  <phase>verify</phase>
					</execution>
				  </executions>
				  <configuration>
					<defaultP2Metadata>false</defaultP2Metadata>
				  </configuration>
				</plugin>
			  </plugins>
			</build>
		  </profile>
		
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>CBI</id>
			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
		</pluginRepository>
	</pluginRepositories>

	<modules>
		<!--plug-ins-->
		<module>org.eclipse.draw2d</module>
		<module>org.eclipse.gef</module>
		<module>org.eclipse.zest.core</module>
		<module>org.eclipse.zest.layouts</module>
		
		<!--docs-->
		<module>org.eclipse.zest.doc.isv</module>
		<module>org.eclipse.draw2d.doc.isv</module>
		<module>org.eclipse.gef.doc.isv</module>

		<!--tests-->
		
		<module>org.eclipse.draw2d.tests</module>
		<module>org.eclipse.zest.tests</module>
		<module>org.eclipse.gef.tests</module>
		
		<!--examples-->
		<module>org.eclipse.draw2d.examples</module>
		<module>org.eclipse.gef.examples.flow</module>
		<module>org.eclipse.gef.examples.logic</module>
		<module>org.eclipse.gef.examples.shapes</module>
		<module>org.eclipse.gef.examples.text</module>
		<module>org.eclipse.gef.examples.ui.capabilities</module>
		<module>org.eclipse.gef.examples.ui.pde</module>
		<module>org.eclipse.zest.examples</module>
		
	
	<!--features-->
		<module>org.eclipse.gef-feature</module>
		<module>org.eclipse.draw2d-feature</module>
		<module>org.eclipse.gef.examples-feature</module>
		<module>org.eclipse.gef.sdk-feature</module>
		<module>org.eclipse.zest-feature</module>
		<module>org.eclipse.zest.sdk-feature</module>
		<module>org.eclipse.gef.repository</module>
		<module>org.eclipse.draw2d.sdk-feature</module>
<!--
		-->

	</modules>

</project>
